--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,20 @@ description = "Add your description here"
 authors = [
     { name = "Michael Smedes", email = "smichaelmedes@gmail.com" }
 ]
-dependencies = []
+dependencies = [
+    "typer>=0.12.5",
+    "pygithub>=2.3.0",
+    "httpx>=0.27.0",
+    "openai>=1.42.0",
+    "rich>=13.7.1",
+    "packaging>=24.1",
+    "python-dotenv>=1.0.1",
+]
 readme = "README.md"
 requires-python = ">= 3.8"
+
+[project.scripts]
+"anjin" = "anjin:main"
 
 [build-system]
 requires = ["hatchling"]
