--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "rich>=13.7.1",
     "packaging>=24.1",
     "python-dotenv>=1.0.1",
+    "pydantic>=2.8.2",
+    "pydantic-settings>=2.4.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
