--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "pydantic>=2.8.2",
     "pydantic-settings>=2.4.0",
+    "ruff>=0.6.2",
+    "beautifulsoup4>=4.12.3",
+    "tiktoken>=0.7.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
