--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "ruff>=0.6.2",
     "beautifulsoup4>=4.12.3",
     "tiktoken>=0.7.0",
+    "ratelimit>=2.2.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -32,6 +33,9 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 dev-dependencies = []
+
+[tool.rye.scripts]
+populate = "python src/anjin/scripts/populate_changelogs.py"
 
 [tool.hatch.metadata]
 allow-direct-references = true
