--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "beautifulsoup4>=4.12.3",
     "tiktoken>=0.7.0",
     "ratelimit>=2.2.1",
+    "changelogs>=0.15.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
