--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,12 @@
 [project]
 name = "anjin"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.1.1"
+description = "Anjin is a project dependency analytics tool"
 authors = [
     { name = "Michael Smedes", email = "smichaelmedes@gmail.com" }
 ]
 dependencies = [
     "typer>=0.12.5",
-    "pygithub>=2.3.0",
     "httpx>=0.27.0",
     "openai>=1.42.0",
     "rich>=13.7.1",
@@ -15,10 +14,6 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "pydantic>=2.8.2",
     "pydantic-settings>=2.4.0",
-    "ruff>=0.6.2",
-    "beautifulsoup4>=4.12.3",
-    "tiktoken>=0.7.0",
-    "ratelimit>=2.2.1",
     "changelogs>=0.15.0",
 ]
 readme = "README.md"
@@ -33,10 +28,11 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = []
+dev-dependencies = [
+    "ruff>=0.6.2"
+]
 
 [tool.rye.scripts]
-populate = "python src/anjin/scripts/populate_changelogs.py"
 
 [tool.hatch.metadata]
 allow-direct-references = true
